# normalization_equivariance

./: .gitignore  LICENSE  README.md  denoiser_sampler.py  eval.py  eval_ne_violation.py  eval_ssim.py  experiments_cfg.py  icml_like.mplstyle  model_logs.py  pyproject.toml  speed_test.py  train.py
analysis/: __init__.py  compute_residuals.py  delta_histogram.py  residual_coverage.py  shift_manipulation.py  utils.py
artifacts/: README.md
artifacts/analysis/: delta_coverage.csv  sigma_x.npz
data/: datasets.md  download_datasets.py  preprocess_data.py  preprocess_sidd.py  sidd_dataset.py
eval_logs/: combined_train_psnr.csv
eval_logs/Set12/: dncnn_sigma10_in_psnr.csv  dncnn_sigma10_in_train_psnr.csv  dncnn_sigma10_psnr.csv  dncnn_sigma10_train_psnr.csv  dncnn_sigma25_psnr.csv  dncnn_sigma25_train_psnr.csv  dncnn_sigma50_psnr.csv  dncnn_sigma50_train_psnr.csv  jpeg_qf_from_uniform_psnr.csv  laplace_sigma20_psnr.csv  laplace_sigma20_train_psnr.csv  rayleigh_sigma17_psnr.csv  rayleigh_sigma17_train_psnr.csv  swinir_sigma10_psnr.csv  swinir_sigma10_train_psnr.csv  swinir_sigma25_psnr.csv  swinir_sigma25_train_psnr.csv  swinir_sigma50_psnr.csv  swinir_sigma50_train_psnr.csv  uniform_sigma14_psnr.csv  uniform_sigma14_train_psnr.csv
eval_logs/Set68/: dncnn_sigma10_psnr.csv  dncnn_sigma10_train_psnr.csv  dncnn_sigma25_psnr.csv  dncnn_sigma25_train_psnr.csv  (+8 more)
figure_scripts/: adaptive_filters.py  compile_train_psnr.py  equivariance_denoising.py  invariance_denoising.py
se/: configs.py  data.py
sidd/: __init__.py  eval.py  train.py  validation_utils.py
(+56 files in other folders)
