[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "se"
version = "0.1.0"
description = "Code for normalization-equivariant denoising experiments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "gdown>=5.2.0",
    "h5py>=3.15.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "rarfile>=4.2",
    "scipy>=1.15.3",
    "scikit-image>=0.25.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
    "wget>=3.2",
]


[tool.black]
line-length = 88


[tool.hatch.build.targets.wheel]
packages = ["se"]
